<package>
  <name>pr2</name>
  <version>1.0.2</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <!-- Hydro -->
  <license>BSD</license>

  <url type="repository">https://github.com/pr2/pr2_metapackages</url>
  <url type="bugtracker">https://github.com/pr2/pr2_metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>audio_common</run_depend>
  
  <!-- <run_depend>camera_drivers</run_depend> -->
  
  <!-- <run_depend>imu_drivers</run_depend> -->
  <!-- In hydro imu_drivers has been changed to just its inner package -->
  <run_depend>microstrain_3dmgx2_imu</run_depend>

  <!-- This is still in hydro, however -->
  <run_depend>joystick_drivers</run_depend>

  <!-- In Hydro laser_drivers has been changed to just its inner packages <run_depend>laser_drivers</run_depend> -->
  <run_depend>sicktoolbox_wrapper</run_depend>
  <run_depend>sicktoolbox</run_depend>
  <run_depend>hokuyo_node</run_depend>

  <!-- Now released -->
  <run_depend>linux_networking</run_depend>

  <run_depend>pr2_base</run_depend>
  <run_depend>pr2_ethercat_drivers</run_depend>
  <run_depend>pr2_navigation_apps</run_depend>
  <run_depend>pr2_power_drivers</run_depend>
  <run_depend>pr2_robot</run_depend>

  <!-- Changed in Hydro to prosilica_camera -->
  <!-- <run_depend>prosilica_driver</run_depend> -->
  <run_depend>camera1394</run_depend>
  <run_depend>prosilica_camera</run_depend>
  <run_depend>wge100_driver</run_depend>

  <!-- Replaced by wifi_ddwrt in Hydro -->
  <!-- <run_depend>wifi_drivers</run_depend> -->
  <run_depend>wifi_ddwrt</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

